--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 
+.idea/
+.idea/inspectionProfiles/
+.idea/modules.xml
+.idea/vcs.xml
+.idea/node-red-machine-learning-project.iml
+.DS_Store
